# chatgptradio

./: .env.example  .gitignore  DIRECTION.md  LICENSE  README.md  WORKFLOW.md  config.yaml  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  telegram_bot.py
builders/: music_prompt.py
collectors/: arxiv.py  cnn_fear_greed.py  gdelt.py  github_trending.py  google_trends.py  hedonometer.py  hn_algolia.py  media_cloud.py  newsapi.py  nitter_rss.py  openai_status.py  reddit.py  system_metrics.py  utils.py  wikipedia.py  yfinance_proxy.py  youtube_chat.py
core/: audio_library.py  audio_queue.py  browser_display.py  calendar_engine.py  chat_commands.py  collector_runner.py  command_engine.py  config.py  db.py  drift.py  dsp.py  journal.py  memory.py  node.py  scene_rotator.py  self_model.py  state.py  track_namer.py  updater.py  websocket_server.py
docs/: DECISIONS.md  TASKS.md
overlays/: NO_FAKE.md  emotions-mockup.html  graph.html  logo-mockup.html  visualizer.html  visualizer_dev.html
scripts/: check_stream.sh  dedup_clips.py  dev-overlay.sh  index_references.py  install_service.sh  install_tg_service.sh  restart.sh  rotate_clips.sh  setup_crons.sh  start.sh  stop.sh  watchdog.sh
tests/: test_audio_feedback.py  test_audio_library.py  test_audio_queue.py  test_audio_queue_commands.py  test_audio_queue_territory.py  test_audio_to_audio.py  test_calendar_engine.py  test_chat_commands.py  test_collector_arxiv.py  test_collector_gdelt.py  test_collector_github_trending.py  test_collector_google_trends.py  test_collector_hedonometer.py  test_config.py  (+38 more)
(+32 files in other folders)
