[project]
name = "chatgpt-radio"
version = "0.1.0"
description = "ChatGPT Radio — 24/7 AI-driven music stream reacting to real-world signals"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "aiosqlite",
    "orjson",
    "aiohttp",
    "websockets",
    "structlog",
    "pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "collectors", "builders", "overlays"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]
