[project]
name = "chatgpt-radio"
version = "0.1.0"
description = "ChatGPT Radio — 24/7 AI-driven music stream reacting to real-world signals"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "aiosqlite",
    "orjson",
    "aiohttp",
    "websockets",
    "structlog",
    "pyyaml",
    "openai>=1.0.0",
    "fal-client>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "collectors", "builders", "overlays"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pyright>=1.1.409",
    "ruff>=0.15.13",
]
scripts = [
    "librosa>=0.10",
    "numpy>=1.24",
]
